# everytime-crawler

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
data/: .gitkeep
debug/: analyze_board_structure.py  analyze_html_structure.py  analyze_timetable.py  debug_test.py  debug_timetable.py  test_public_access.py
docs/: development.md  usage.md
examples/: analyze_massive_data.py  basic_usage.py  board_crawling_example.py  crawl_july_2025_free_board.py  crawling_gui.py  massive_board_crawling.py  massive_board_crawling_with_comments.py  simple_board_crawling.py  test_basic_crawler.py  test_login.py
src/everytime_crawler/: __init__.py  board_crawler.py  crawler.py  utils.py
tests/: test_board_crawler.py  test_environment.py
